# velkoz

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  system_prompt.txt
src/: fs.rs  main.rs  types.rs  velkoz_fs.rs
src/clients/: common.rs  gemini.rs  mod.rs  ollama.rs
