[package]
name = "velkoz"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
display-error-chain = "0.2.2"
dotenvy = "0.15.7"
gemini-rust = "1.7.1"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = {version = "1.50.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ureq = {version = "3.3.0", features = ["json"]}
